Update commit author

--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -29,4 +29,4 @@ jobs:
           commit_message: Update stats
           commit_user_name: Brais Moure [GitHub Actions]
           commit_user_email: mouredev@gmail.com
-          commit_author: mouredev
+          commit_author: mouredev <mouredev@gmail.com>
