--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'mouredev/roadmap-retos-programacion'
     runs-on: ubuntu-latest
 
     permissions:
