--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -9,17 +9,6 @@ on:
       - '!Roadmap/**/*.md'
 
 jobs:
-  check-title:
-    name: Check title
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone repository to virtual machine
-        uses: actions/checkout@v4
-      - name: Check title of the pull request
-        uses: ./.github/actions/pull-requests/check-title
-        with:
-          title: ${{ github.event.pull_request.title }}
-
   get-committed-files:
     name: Get committed files
     runs-on: ubuntu-latest
@@ -33,6 +22,19 @@ jobs:
       - name: Get committed files of the pull request
         id: changed-files
         uses: tj-actions/changed-files@v42
+        with:
+          separator: '\n'
+
+  check-title:
+    name: Check title
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone repository to virtual machine
+        uses: actions/checkout@v4
+      - name: Check title of the pull request
+        uses: ./.github/actions/pull-requests/check-title
+        with:
+          title: ${{ github.event.pull_request.title }}
 
   check-committed-files:
     needs: [get-committed-files]
