--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Clone repository to virtual machine
         uses: actions/checkout@v4
+        with:
+            ref: ${{ github.event.pull_request.base.ref }}
       - name: Check title of the pull request
         uses: ./.github/actions/pull-requests/check-title
         with:
@@ -45,6 +47,8 @@ jobs:
     steps:
       - name: Clone repository to virtual machine
         uses: actions/checkout@v4
+        with:
+            ref: ${{ github.event.pull_request.base.ref }}
       - name: Check committed files of the pull request
         id: changed-files
         uses: ./.github/actions/pull-requests/check-committed-files
@@ -58,6 +62,8 @@ jobs:
     steps:
       - name: Clone repository to virtual machine
         uses: actions/checkout@v4
+        with:
+            ref: ${{ github.event.pull_request.base.ref }}
       - name: Check committed file of the pull request
         uses: ./.github/actions/pull-requests/check-committed-file
         with:
