--- a/.github/actions/pull-requests/check-committed-file/action.yml
+++ b/.github/actions/pull-requests/check-committed-file/action.yml
@@ -17,3 +17,7 @@ inputs:
   title:
     description: 'Title of the pull request'
     required: true
+  log01:
+    required: true
+  log02:
+    required: true
