Update author input

--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Check committed file of the pull request
         uses: ./.github/actions/pull-requests/check-committed-file
         with:
-          author: ${{ github.event.pull_request.user.name }}
+          author: ${{ github.event.pull_request.user.name || github.actor }}
           committed-file: ${{ needs.check-committed-files.outputs.committed-file }}
           title: ${{ github.event.pull_request.title }}
 
