--- a/.github/actions/pull-requests/check-committed-file/package.json
+++ b/.github/actions/pull-requests/check-committed-file/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "hozlucas28",
 	"dependencies": {
-		"@actions/core": "^1.10.1"
+		"@actions/core": "1.10.1"
 	},
 	"description": "GitHub Action to check changed or modified file of a pull request",
 	"keywords": [],
