Update types of pull request trigger event

--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -3,7 +3,7 @@ name: 'Check pull request'
 on:
   pull_request:
     branches: [main]
-    types: [opened, reopened, edited, synchronize]
+    types: [opened, reopened, synchronize]
     paths:
       - 'Roadmap/**'
       - '!Roadmap/**/*.md'
