Fix spam action on check boxes of pull request description

--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -3,13 +3,14 @@ name: 'Check pull request'
 on:
   pull_request:
     branches: [main]
-    types: [opened, reopened, synchronize]
+    types: [opened, edited, reopened, synchronize]
     paths:
       - 'Roadmap/**'
       - '!Roadmap/**/*.md'
 
 jobs:
   get-committed-files:
+    if: ${{ github.action != 'edited' || github.event.changes.title.from != github.event.pull_request.title}}
     name: Get committed files
     runs-on: ubuntu-latest
     outputs:
@@ -26,6 +27,7 @@ jobs:
           separator: '\n'
 
   check-title:
+    if: ${{ github.action != 'edited' || github.event.changes.title.from != github.event.pull_request.title}}
     name: Check title
     runs-on: ubuntu-latest
     steps:
