--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -25,6 +25,8 @@ jobs:
         uses: tj-actions/changed-files@v42
         with:
           separator: '\n'
+      - name: Log
+        run: echo ${{ github.event.action }} && echo ${{ github.event.changes.title.from }} && echo ${{ github.event.pull_request.title }}
 
   check-title:
     if: github.event.action != 'edited' || github.event.changes.title.from != github.event.pull_request.title
