--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -9,7 +9,21 @@ on:
       - '!Roadmap/**/*.md'
 
 jobs:
+  check-title:
+    name: Check title
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone repository to virtual machine
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.base.ref }}
+      - name: Check title of the pull request
+        uses: ./.github/actions/pull-requests/check-title
+        with:
+          title: ${{ github.event.pull_request.title }}
+
   get-committed-files:
+    needs: [check-title]
     name: Get committed files
     runs-on: ubuntu-latest
     outputs:
@@ -27,21 +41,8 @@ jobs:
       - name: Log
         run: echo ${{ github.event.action }} && echo ${{ github.event.changes.title.from }} && echo ${{ github.event.pull_request.title }}
 
-  check-title:
-    name: Check title
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone repository to virtual machine
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.base.ref }}
-      - name: Check title of the pull request
-        uses: ./.github/actions/pull-requests/check-title
-        with:
-          title: ${{ github.event.pull_request.title }}
-
   check-committed-files:
-    needs: [get-committed-files, check-title]
+    needs: [get-committed-files]
     name: Check committed files
     runs-on: ubuntu-latest
     outputs:
