--- a/.github/actions/pull-requests/check-committed-file/package.json
+++ b/.github/actions/pull-requests/check-committed-file/package.json
@@ -3,11 +3,17 @@
 	"dependencies": {
 		"@actions/core": "1.10.1"
 	},
-	"description": "GitHub Action to check changed or modified file of a pull request",
+	"description": "GitHub Action to check committed file of a pull request",
+	"devDependencies": {
+		"@vercel/ncc": "^0.38.1"
+	},
 	"keywords": [],
 	"license": "MIT",
-	"main": "main.js",
-	"name": "check-changed-or-modified-file",
+	"main": "dist/index.js",
+	"name": "check-committed-file",
+	"scripts": {
+		"build": "ncc build main.js --minify --target es2022 --license licenses.txt"
+	},
 	"type": "module",
 	"version": "1.0.0"
 }
