--- a/.github/actions/pull-requests/check-committed-files/package.json
+++ b/.github/actions/pull-requests/check-committed-files/package.json
@@ -3,10 +3,17 @@
 	"dependencies": {
 		"@actions/core": "1.10.1"
 	},
-	"description": "GitHub Action to check changed and modified files of a pull request",
+	"description": "GitHub Action to check committed files of a pull request",
+	"devDependencies": {
+		"@vercel/ncc": "^0.38.1"
+	},
 	"keywords": [],
 	"license": "MIT",
-	"main": "main.js",
-	"name": "check-changed-and-modified-files",
+	"main": "dist/index.js",
+	"name": "check-committed-files",
+	"scripts": {
+		"build": "ncc build main.js --minify --target es2022 --license licenses.txt"
+	},
+	"type": "module",
 	"version": "1.0.0"
 }
