--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "CodeGPT.apiKey": "OpenAI"
+    "CodeGPT.apiKey": "OpenAI",
+    "java.project.sourcePaths": [
+        "Roadmap/04 - CADENAS DE CARACTERES/java",
+        "Roadmap/05 - VALOR Y REFERENCIA/java"
+    ]
 }
