--- a/Roadmap/00 - SINTAXIS, VARIABLES, TIPOS DE DATOS Y HOLA MUNDO/free pascal/jorgeturiel.lpi
+++ b/Roadmap/00 - SINTAXIS, VARIABLES, TIPOS DE DATOS Y HOLA MUNDO/free pascal/jorgeturiel.lpi
@@ -10,7 +10,7 @@
         <MainUnitHasScaledStatement Value="False"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
-      <Title Value="blueicaro"/>
+      <Title Value="jorgeturiel"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
     </General>
@@ -19,7 +19,7 @@
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
-      <DestinationDirectory Value="C:\github\roadmap-retos-programacion\Roadmap\01 - OPERADORES Y ESTRUCTURAS DE CONTROL\free pascal"/>
+      <DestinationDirectory Value="C:\github\roadmap-retos-programacion\Roadmap\00 - SINTAXIS, VARIABLES, TIPOS DE DATOS Y HOLA MUNDO\free pascal"/>
       <CompressFinally Value="False"/>
       <UseFileFilters Value="True"/>
     </PublishOptions>
@@ -28,7 +28,7 @@
     </RunParams>
     <Units>
       <Unit>
-        <Filename Value="blueicaro.lpr"/>
+        <Filename Value="jorgeturiel.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit>
     </Units>
@@ -37,7 +37,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="blueicaro"/>
+      <Filename Value="jorgeturiel"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
